<resources>
    <string name="app_name">SupabaseApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sign_in">Sign In</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="logo">logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="addbutton">addButton</string>
    <string name="disc_name">Disc Name</string>
    <string name="year">Year</string>
    <string name="artist">Artist</string>
    <string name="discimage">discImage</string>
    <string name="title_activity_add_disc">AddDiscActivity</string>
    <string name="add_disc">Add disc</string>
    <string name="disc_year">Disc Year</string>
    <string name="disc_artist">Disc Artist</string>
    <string name="Title_discs">Discs</string>
</resources>