<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green"
    android:orientation="vertical"
    android:layout_marginBottom="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        android:background="@color/green"
        >

        <TextView
            android:id="@+id/textViewDiscName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/disc_name"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textViewDiscYear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/year"
            android:textAlignment="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textViewDiscArtist"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:text="@string/artist"
            android:textAlignment="center"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/imageViewDiscImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:contentDescription="@string/discimage"
            android:src="@drawable/baseline_android_24"
           />

    </LinearLayout>
</androidx.cardview.widget.CardView>
